@@ -1,5 +1,10 @@
 #ifdef __CINT__
-
+#pragma link C++ class vector<int>+;
+#pragma link C++ class vector<long>+;
+#pragma link C++ class vector<unsigned int>+;
+#pragma link C++ class vector<unsigned long>+;
+#pragma link C++ class vector<float>+;
+#pragma link C++ class vector<double>+;
 #pragma link C++ class itreestream+;
 #pragma link C++ class otreestream+;
 #endif 
